Fixed update nav z-index issue

--- a/Harbor.UI/Content/themes/default/theme.css
+++ b/Harbor.UI/Content/themes/default/theme.css
@@ -94,7 +94,6 @@ dd {
   line-height: 4.286em;
   color: #eeeeee;
   background: #345276;
-  position: fixed;
   width: 100%;
   -moz-box-shadow: 0 2px 4px rgba(105, 105, 105, 0.25);
   -webkit-box-shadow: 0 2px 4px rgba(105, 105, 105, 0.25);
@@ -116,12 +115,10 @@ dd {
   #frame-nav ul li.selected a {
     color: #333333; }
 
-#frame-body {
-  top: 4.286em; }
-  #frame-body ::-webkit-scrollbar-thumb {
-    background: #cccccc; }
-    #frame-body ::-webkit-scrollbar-thumb:hover {
-      background: #b3b3b3; }
+#frame-body ::-webkit-scrollbar-thumb {
+  background: #cccccc; }
+  #frame-body ::-webkit-scrollbar-thumb:hover {
+    background: #b3b3b3; }
 
 .page-header h1 {
   font-size: 3.14em;
